[tool.poetry]
name = "realsense-cap-sample"
version = "0.1.0"
description = ""
authors = ["ratovia <ratovia@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
